--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,6 +5,7 @@
             "label": "C/C++: gcc.exe build active file",
             "command": "C:\\MinGW\\bin\\gcc.exe",
             "args": [
+                "-std=c99",
                 "-fdiagnostics-color=always",
                 "-g",
                 "${file}",
